// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CustomHitsStats correctly when no hits 1`] = `
<div
  className="sk-hits-stats"
  data-qa="hits-stats"
>
  <div
    className="sk-hits-stats__info"
    data-qa="info"
  >
    <span>
      Search gave
       
    </span>
    <span>
      0 hit(s) among datasets
    </span>
    <span>
      , 
      0 hit(s) among APIs
    </span>
    <span>
      , 
      0 hit(s) among concepts
    </span>
    <span>
       
      and
       
    </span>
    <span>
      0 hit(s) among information models
    </span>
    <span>
      Sorry, no hits
    </span>
  </div>
</div>
`;

exports[`should render CustomHitsStats correctly when no initial search 1`] = `
<div
  className="sk-hits-stats"
  data-qa="hits-stats"
>
  <div
    className="sk-hits-stats__info nosearch"
    data-qa="info"
  >
    <div>
      <span>
        Search among
         
        100
         
        dataset descriptions
      </span>
      <span>
        , 
        100
         
        concepts
      </span>
      <span>
         
        and
         
        0
         
        information models
      </span>
    </div>
  </div>
</div>
`;

exports[`should render CustomHitsStats correctly when search performed  1`] = `
<div
  className="sk-hits-stats"
  data-qa="hits-stats"
>
  <div
    className="sk-hits-stats__info"
    data-qa="info"
  >
    <span>
      Search gave
       
    </span>
    <span>
      100 hit(s) among datasets
    </span>
    <span>
      , 
      0 hit(s) among APIs
    </span>
    <span>
      , 
      100 hit(s) among concepts
    </span>
    <span>
       
      and
       
    </span>
    <span>
      0 hit(s) among information models
    </span>
  </div>
</div>
`;
